# SysMon

./: README.md  myOwnNote.txt  pyproject.toml
docs/: design.md
src/: collector.py  display.py  logger.py  main.py  report.py
tests/: test_collector.py  test_logger.py
