[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"



[project]
name = "SysMon_project_arretee"
version = "0.0.1"
authors = [
    {name="arretee", email="arreteear@gmail.com"}
]
description = "cmd tool for monitoring and logging PC stats."
readme = "README.md"
requires-python = ">=3.9"

license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "rich",
    "psutil"
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.package-dir]
"" = "src"


[project.scripts]
run-sysmon = "main:main"
